k8s/apps/umami/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app: umami
